--- a/index.html
+++ b/index.html
@@ -18,23 +18,30 @@
     html {
       font-family: sans-serif;
       font-size: 16px;
+      background: #000 linear-gradient(90deg, darkcyan, darkmagenta) repeat-y;
     }
     main {
       min-height: 100%;
-      background: linear-gradient(90deg, darkcyan, darkmagenta);
-      padding-top: 1px;
+      overflow: hidden;
     }
     .container {
-      width: 560px;
+      max-width: 560px;
       margin-left: auto;
       margin-right: auto;
-      margin-top: 100px;
+      margin-top: 10px;
+      margin-bottom: 10px;
       padding: 16px;
       background-color: #fff;
       border-radius: 4px;
       box-shadow: 0 10px 20px 0 rgba(0 0 0 / 33%), 0 0 20px 0 rgba(0 0 0 / 10%);
       background-color: #000;
       color: #fff;
+    }
+    @media (max-width: 560px) {
+      .container {
+        margin-left: 10px;
+        margin-right: 10px;
+      }
     }
     ul {
       padding-left: 20px;
@@ -46,11 +53,12 @@
     p {
       margin-top: 8px;
       margin-bottom: 8px;
+      line-height: 1.5;
     }
 
     code, pre {
       background-color: #444;
-      padding: 4px;
+      padding: 2px;
       border-radius: 2px;
     }
 
@@ -69,8 +77,7 @@ type Todo: {
   id: string,
   text: string,
   completed: boolean
-}
-  </pre>
+}</pre>
       </p>
       <p>
         Methods:
