Add auth & protected todos routes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <main>
     <div class="container">
       <p>
-        The API for <b>Todos</b>
+        <b>Todos</b> API
       </p>
       <p>
       <pre>
